syntax = "proto3";

package common.pagination;

import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "google/protobuf/field_mask.proto";

option go_package = "github.com/devexps/go-microservices-demo/gen/api/go/common/pagination;pagination";

message PagingRequest {
  // page
  int32 page = 1 [
    (gnostic.openapi.v3.property) = {
      description: "Page",
      default: {number: 1}
    }
  ];

  // pageSize
  int32 pageSize = 2 [
    json_name = "pageSize",
    (gnostic.openapi.v3.property) = {
      description: "Page size",
      default: {number: 10}
    }
  ];

  // query
  string query = 3 [
    json_name = "query",
    (gnostic.openapi.v3.property) = {
      description: "Query",
      example: {yaml: "{\"key1\":\"val1\",\"key2\":\"val2\"}"}
    }
  ];

  // orQuery
  string orQuery = 4 [
    json_name = "or",
    (gnostic.openapi.v3.property) = {
      description: "Or query",
      example: {yaml: "{\"key1\":\"val1\",\"key2\":\"val2\"}"}
    }
  ];

  // orderBy
  repeated string orderBy = 5 [
    json_name = "orderBy",
    (gnostic.openapi.v3.property) = {
      description: "Sorting conditions, add '-' before the field name for descending order, otherwise it will be ascending order."
      example: {yaml: "{\"val1\", \"-val2\"}"}
    }
  ];

  // noPaging
  bool noPaging = 6 [
    json_name = "nopaging",
    (gnostic.openapi.v3.property) = {description: "No paging"}
  ];

  google.protobuf.FieldMask fieldMask = 7 [
    json_name = "field_mask",
    (gnostic.openapi.v3.property) = {description: "field mask path set"}
  ];
}

// PagingResponse
message PagingResponse {
  // total
  int32 total = 1;
  // items
  repeated google.protobuf.Any items = 2;
}